Category should be "component", not "product"
Also change path to gnats database

--- a/data/migrate-Gnats.cfg
+++ b/data/migrate-Gnats.cfg
@@ -1,6 +1,6 @@
 
 # The path to the directory that contains the GNATS database.
-$gnats_path = '/home/gnats.test';
+$gnats_path = '/usr/gnats/';
 
 # Some GNATS users do not have full email addresses, but Bugzilla requires
 # every user to have an email address. What domain should be appended to
@@ -56,7 +56,7 @@ $default_originator = 'gnats-admin';
 # the migrator and you don't have to worry about it.
 $translate_fields = {
   'Arrival-Date' => 'creation_ts',
-  Category => 'product',
+  Category => 'component',
   #Class => 'cf_type',
   Classification => '',
   Description => 'comment',
