Add Class mapping

--- a/data/migrate-Gnats.cfg
+++ b/data/migrate-Gnats.cfg
@@ -57,7 +57,7 @@ $default_originator = 'gnats-admin';
 $translate_fields = {
   'Arrival-Date' => 'creation_ts',
   Category => 'component',
-  #Class => 'cf_type',
+  Class => 'cf_type',
   Classification => '',
   Description => 'comment',
   'Last-Modified' => 'delta_ts',
