We now have 10.0

--- a/data/migrate-Gnats.cfg
+++ b/data/migrate-Gnats.cfg
@@ -22,7 +22,7 @@ $component_name = 'misc';
 # of parentheses in the regular expression, also called "$1") will be used
 # as the version value for the bug instead of the full version value specified
 # in GNATS.
-$version_regex = '(FreeBSD )?(?<capture>[0-9]\.[0-9\.]+-((PRE)?RELEASE|BETA[0-9]|CURRENT|STABLE))(-p\d+)?( [a-z0-9]+)?';
+$version_regex = '(FreeBSD )?(?<capture>[0-9]+\.[0-9\.]+-((PRE)?RELEASE|BETA[0-9]|CURRENT|STABLE))(-p\d+)?( [a-z0-9]+)?';
 $version_fallback = 'unspecified';
 
 # Sometimes, a PR has no valid Originator, so we fall back to the From
